# kabu

./: .autorc  .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  amber.yaml  book.toml  config-example.toml  deny.toml  diesel.toml  docker-compose.yml
.github/workflows/: book.yml  ci.yml  deploy.yml
book/: SUMMARY.md  architecture.md  examples.md  getting_started.md  introduction.md  tips_and_tricks.md
book/architecture/: components.md  node_system.md  state_management.md
book/tips_and_tricks/: address_book.md  custom_messages.md
crates/broadcast/accounts/: Cargo.toml
crates/broadcast/accounts/src/: lib.rs
crates/broadcast/accounts/src/accounts_monitor/: account_monitor_component.rs  accounts_actor.rs  mod.rs
crates/broadcast/accounts/src/signers/: initialize_actor.rs  mod.rs  signers_actor.rs  signers_component.rs
crates/broadcast/broadcaster/: Cargo.toml
crates/broadcast/broadcaster/src/: anvil.rs  flashbots.rs  lib.rs
crates/broadcast/flashbots/: Cargo.toml
crates/broadcast/flashbots-client/: Cargo.toml
crates/core/actors/: Cargo.toml
crates/core/actors-macros/: Cargo.toml
crates/core/block-history/: Cargo.toml
crates/core/block-history-actor/: Cargo.toml
crates/core/blockchain/: Cargo.toml
crates/core/blockchain-actors/: Cargo.toml
crates/core/blockchain-actors/src/: actor.rs
crates/core/blockchain/src/: app_state.rs  blockchain.rs  blockchain_state.rs  blockchain_tokens.rs  lib.rs  strategy.rs
crates/core/components/: Cargo.toml
crates/core/components/src/: builder.rs  kabu_builder.rs  kabu_node.rs  lib.rs  node.rs  traits.rs
crates/core/mempool/: Cargo.toml
crates/core/mempool/src/: lib.rs  mempool_actor.rs  mempool_builder.rs  mempool_component.rs
crates/core/node/: Cargo.toml
crates/core/node/src/: lib.rs
crates/core/router/: Cargo.toml
crates/core/router/src/: lib.rs  swap_router_actor.rs  swap_router_component.rs
crates/core/topology/: Cargo.toml
crates/core/topology/src/: lib.rs  topology.rs  topology_config.rs
crates/defi/abi/: Cargo.toml
crates/defi/address-book/: Cargo.toml
crates/defi/health-monitor/: Cargo.toml
crates/defi/health-monitor/src/: lib.rs  metrics_recorder_actor.rs  pool_health_monitor.rs  state_health_monitor.rs  stuffing_tx_monitor.rs
crates/defi/market/: Cargo.toml
crates/defi/pools/: Cargo.toml
crates/defi/pools/src/: curvepool.rs  lib.rs  maverickpool.rs  pancakev3pool.rs  uniswapv2pool.rs  uniswapv3pool.rs
crates/defi/pools/src/db_reader/: uniswapv3.rs
crates/defi/pools/src/errors/: mod.rs
crates/defi/pools/src/loaders/: curve.rs  maverick.rs  mod.rs  uniswap2.rs  uniswap3.rs
crates/defi/pools/src/protocols/: curve.rs  helper.rs  sushiswap.rs  uniswapv2.rs  uniswapv3.rs
crates/defi/pools/src/state_readers/: erc20.rs  uniswapv2.rs  uniswapv3.rs  uniswapv3_quoter.rs
crates/defi/pools/src/virtual_impl/: tick_provider.rs  uniswapv3.rs
crates/defi/preloader/: Cargo.toml
crates/defi/preloader/src/: lib.rs  preloader_actor.rs
crates/defi/price/: Cargo.toml
crates/defi/price/src/: lib.rs  price_actor.rs
crates/defi/uniswap-v3-math/: Cargo.toml
crates/evm/db/: Cargo.toml
crates/evm/db/benches/: benchmark.rs
crates/evm/db/src/: alloydb.rs  database_helpers.rs  database_loom.rs  error.rs  fast_cache_db.rs  kabu_db.rs  kabu_db_helper.rs  lib.rs  loom_db.rs
crates/evm/utils/: Cargo.toml
crates/evm/utils/src/: evm.rs  evm_env.rs  evm_tx_env.rs  geth_state_update.rs  nweth.rs  reth_types.rs  revm_balances.rs
crates/execution/estimator/: Cargo.toml
crates/execution/estimator/src/: evm.rs  geth.rs  hardhat.rs  lib.rs
crates/execution/multicaller/: Cargo.toml
crates/execution/multicaller/src/: deploy.rs  multicaller_encoder.rs  opcodes_encoder.rs  opcodes_helpers.rs  swap_encoder.rs  swapline_encoder.rs  swapstep_encoder.rs
crates/execution/multicaller/src/pool_abi_encoder/: abi_encoder.rs  mod.rs
crates/execution/multicaller/src/pool_abi_encoder/pools/: curve.rs  maverick.rs  pancake3.rs  uniswapv2.rs  uniswapv3.rs
crates/execution/multicaller/src/pool_opcodes_encoder/: curve.rs  mod.rs  steth.rs  swap_opcodes_encoders.rs  uniswap2.rs  uniswap3.rs  wsteth.rs
crates/kabu/: Cargo.toml
crates/kabu/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: influxdb_actor.rs  lib.rs
crates/node/db-access/: Cargo.toml
crates/node/db-access/src/: reth_worker.rs
crates/node/debug-provider/: Cargo.toml
crates/node/debug-provider/src/: anvilprovider.rs  archiveprovider.rs  debugprovider.rs  httpcached.rs
crates/node/exex/: Cargo.toml
crates/node/exex/src/: lib.rs  reth_exex_worker.rs
crates/node/grpc/: Cargo.toml
crates/node/grpc-exex-proto/: Cargo.toml  build.rs
crates/node/grpc/src/: node_exex.rs  node_exex_worker.rs
crates/node/json-rpc/: Cargo.toml
crates/node/json-rpc/src/: block_processing_component.rs  lib.rs  mempool_processing_component.rs  node_block_actor.rs  node_mempool_actor.rs  wait_for_node_sync_actor.rs
crates/node/json-rpc/src/eth/: eth_node_block_starter.rs  mod.rs  node_block_header_worker.rs  node_block_logs_worker.rs  node_block_state_worker.rs  node_block_with_tx_worker.rs
crates/node/json-rpc/src/op/: node_block_header_worker.rs  op_node_block_starter.rs
crates/node/node-actor-config/: Cargo.toml
crates/node/node-config/: Cargo.toml
crates/node/node-player/: Cargo.toml
crates/node/node-player/src/: actor.rs  compose.rs  lib.rs  mempool.rs  worker.rs
testing/backtest-runner/: Cargo.toml  test_18498188.toml  test_18567709.toml  test_19101578.toml  test_19109955.toml  test_20927846.toml  test_20935488.toml  test_20937428.toml  test_21035613.toml
testing/backtest-runner/benches/: benchmark.rs
testing/backtest-runner/src/: flashbots_mock.rs  main.rs
testing/backtest-runner/src/test_config/: mod.rs
testing/gasbench/: Cargo.toml
testing/gasbench/src/: dto.rs  main.rs  preloader.rs  soltest.rs
testing/nodebench/: Cargo.toml
testing/replayer/: Cargo.toml
testing/replayer/src/: main.rs
(+120 files in other folders)
