[workspace]
default-members = ["bin/kabu", "bin/keys", "testing/backtest-runner", "testing/gasbench", "testing/nodebench", "testing/replayer"]
members = [
  "bin/kabu",
  "bin/keys",
  "crates/broadcast/accounts",
  "crates/broadcast/broadcaster",
  "crates/core/block-history",
  "crates/core/blockchain",
  "crates/core/components",
  "crates/core/mempool",
  "crates/core/node",
  "crates/core/router",
  "crates/core/topology",
  "crates/defi/abi",
  "crates/defi/address-book",
  "crates/defi/health-monitor",
  "crates/defi/market",
  "crates/defi/pools",
  "crates/defi/preloader",
  "crates/defi/price",
  "crates/defi/uniswap-v3-math",
  "crates/evm/db",
  "crates/evm/utils",
  "crates/execution/estimator",
  "crates/execution/multicaller",
  "crates/metrics",
  "crates/node/debug-provider",
  "crates/node/exex",
  "crates/node/json-rpc",
  "crates/node/node-config",
  "crates/node/node-player",
  "crates/rpc/handler",
  "crates/rpc/state",
  "crates/storage/db",
  "crates/strategy/backrun",
  "crates/strategy/merger",
  "crates/types/blockchain",
  "crates/types/entities",
  "crates/types/events",
  "crates/types/market",
  "crates/types/swap",
  "testing/backtest-runner",
  "testing/gasbench",
  "testing/nodebench",
  "testing/replayer",
]
resolver = "2"

[workspace.package]
edition = "2021"
exclude = [".github/"]
homepage = "https://github.com/cakevm/kabu"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cakevm/kabu"
rust-version = "1.88"
version = "0.6.0"

[workspace.dependencies]
# broadcast
kabu-broadcast-accounts = { path = "crates/broadcast/accounts" }
kabu-broadcast-broadcaster = { path = "crates/broadcast/broadcaster" }
# core
kabu-core-block-history = { path = "crates/core/block-history" }
kabu-core-blockchain = { path = "crates/core/blockchain" }
kabu-core-components = { path = "crates/core/components" }
kabu-core-mempool = { path = "crates/core/mempool" }
kabu-core-node = { path = "crates/core/node" }
kabu-core-router = { path = "crates/core/router" }
kabu-core-topology = { path = "crates/core/topology" }
# defi
kabu-defi-abi = { path = "crates/defi/abi" }
kabu-defi-address-book = { path = "crates/defi/address-book" }
kabu-defi-health-monitor = { path = "crates/defi/health-monitor" }
kabu-defi-market = { path = "crates/defi/market" }
kabu-defi-pools = { path = "crates/defi/pools" }
kabu-defi-preloader = { path = "crates/defi/preloader" }
kabu-defi-price = { path = "crates/defi/price" }
kabu-defi-uniswap-v3-math = { path = "crates/defi/uniswap-v3-math" }
# evm
kabu-evm-db = { path = "crates/evm/db" }
kabu-evm-utils = { path = "crates/evm/utils" }
# execution
kabu-execution-estimator = { path = "crates/execution/estimator" }
kabu-execution-multicaller = { path = "crates/execution/multicaller" }
# loom
kabu = { path = "bin/kabu" }
# metrics
kabu-metrics = { path = "crates/metrics" }
# node
kabu-node-config = { path = "crates/node/node-config" }
kabu-node-debug-provider = { path = "crates/node/debug-provider" }
kabu-node-exex = { path = "crates/node/exex" }
kabu-node-json-rpc = { path = "crates/node/json-rpc" }
kabu-node-player = { path = "crates/node/node-player" }
# rpc
kabu-rpc-handler = { path = "crates/rpc/handler" }
kabu-rpc-state = { path = "crates/rpc/state" }
# storage
kabu-storage-db = { path = "crates/storage/db" }
# strategy
kabu-strategy-backrun = { path = "crates/strategy/backrun" }
kabu-strategy-merger = { path = "crates/strategy/merger" }
# types
kabu-types-blockchain = { path = "crates/types/blockchain" }
kabu-types-entities = { path = "crates/types/entities" }
kabu-types-events = { path = "crates/types/events" }
kabu-types-market = { path = "crates/types/market" }
kabu-types-swap = { path = "crates/types/swap" }

# logging
dotenvy = "0.15"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# error handling
either = "1.13"
eyre = "0.6.12"
thiserror = "2.0.12"

# async
async-stream = "0.3.6"
async-trait = "0.1.83"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"

# misc
aes = "0.8.4"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
hex = "0.4.3"
indexmap = "2.6.0"
k256 = "0.13.4"
lazy_static = "1.5.0"
num_cpus = "1.16"
quote = "1.0.37"
rand = "0.9.1"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["json", "trust-dns"] }
serde = "1.0.214"
serde_json = "1.0.132"
sha2 = "0.10.8"
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
syn = { version = "2.0.85", features = ["fold", "full"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
toml = "0.9.2"
tower = "0.5.1"
url = "2.5.2"

# db
bb8 = "0.9.0"
diesel = { version = "2.2.4", features = ["chrono", "numeric", "postgres"] }
diesel-async = { version = "0.6.1", features = ["bb8", "postgres"] }
influxdb = "0.7.2"

# web
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
utoipa = { version = "5.1.3", features = ["axum_extras", "chrono", "uuid"] }

# testing
criterion = { version = "0.6.0", features = ["async_tokio"] }
wiremock = "0.6.2"

# revm
revm = { version = "27.0.3", features = [
  "blst",
  "optional_balance_check",
  "optional_block_gas_limit",
  "optional_eip3607",
  "optional_no_base_fee",
  "secp256k1",
  "std",
], default-features = false }

op-alloy = { version = "0.18.11", features = ["consensus", "network", "provider", "rpc-types"] }

# alloy
alloy = { version = "1.0.22", features = [
  "consensus",
  "contract",
  "full",
  "json-rpc",
  "map-fxhash",
  "node-bindings",
  "rand",
  "rlp",
  "rpc-types-anvil",
  "rpc-types-json",
  "rpc-types-trace",
  "serde",
  "sol-types",
], default-features = false }
alloy-chains = "0.2.5"
alloy-consensus = "1.0.22"
alloy-eips = "1.0.22"
alloy-evm = "0.15"
alloy-json-rpc = "1.0.22"
alloy-network = "1.0.22"
alloy-node-bindings = "1.0.22"
alloy-primitives = { version = "1.2.0", features = ["map-foldhash", "map-fxhash", "rand"], default-features = false }
alloy-provider = { version = "1.0.22", features = ["anvil-api", "anvil-node", "debug-api", "ipc", "mev-api", "pubsub", "reqwest", "ws"] }
alloy-pubsub = "1.0.22"
alloy-rpc-client = { version = "1.0.22", features = ["ipc", "pubsub", "reqwest", "ws"] }
alloy-rpc-types = "1.0.22"
alloy-rpc-types-eth = "1.0.22"
alloy-rpc-types-mev = "1.0.22"
alloy-rpc-types-trace = "1.0.22"
alloy-signer = "1.0.22"
alloy-signer-local = "1.0.22"
alloy-sol-types = { version = "1.2.0", features = ["json"] }
alloy-transport = "1.0.22"
alloy-transport-ipc = "1.0.22"
alloy-transport-ws = "1.0.22"

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["asm-keccak"] }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["asm-keccak"] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

[profile.test]
debug = 1
incremental = true

[profile.release]
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true # stripping of debuginfo

[profile.maxperf]
# set parallel codegen to 1 to increase performance
codegen-units = 1
inherits = "release"
lto = "fat"
