[package]
name = "kabu-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-types-events.workspace = true

async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
influxdb.workspace = true
tokio.workspace = true
tracing.workspace = true

#revm
revm.workspace = true
