[package]
name = "kabu-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
influxdb.workspace = true
kabu-core-components = { workspace = true }
tokio.workspace = true
tracing.workspace = true

# reth
reth-tasks.workspace = true
