[package]
name = "kabu-backtest-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
kabu = { workspace = true, features = ["full-json-rpc", "strategy-full"] }

clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wiremock.workspace = true

# alloy
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true

kabu-core-components.workspace = true
kabu-node-config.workspace = true
kabu-types-blockchain.workspace = true
reth-tasks.workspace = true

[dev-dependencies]
chrono.workspace = true
criterion = { version = "0.5.1", features = ["async_tokio"] }
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true

[[bench]]
harness = false
name = "benchmark"
