[package]
name = "kabu-gasbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

alloy-evm.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
revm.workspace = true

kabu-defi-address-book.workspace = true
kabu-defi-market.workspace = true
kabu-defi-pools.workspace = true
kabu-defi-preloader.workspace = true
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-execution-multicaller.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-market.workspace = true
kabu-types-swap.workspace = true
