[package]
name = "kabu-replayer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
kabu-core-blockchain.workspace = true
kabu-defi-abi.workspace = true
kabu-defi-address-book.workspace = true
kabu-defi-pools.workspace = true
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-execution-multicaller.workspace = true
kabu-node-debug-provider.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true
kabu-types-market.workspace = true
kabu-types-swap.workspace = true

alloy.workspace = true
alloy-evm.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
