[package]
name = "kabu-broadcast-accounts"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-blockchain.workspace = true
kabu-core-components = { workspace = true }
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true
kabu-types-events.workspace = true
kabu-types-swap.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

#alloy
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true

# reth
reth-tasks.workspace = true

# revm
revm.workspace = true
