[package]
name = "kabu-broadcast-broadcaster"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-components = { workspace = true }
kabu-types-events.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-mev.workspace = true
alloy-signer-local.workspace = true

# reth
reth-tasks.workspace = true
