[package]
name = "kabu-core-actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
