[package]
name = "kabu-core-blockchain-actors"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-broadcast-accounts.workspace = true
kabu-broadcast-broadcaster.workspace = true
kabu-broadcast-flashbots.workspace = true
kabu-core-actors.workspace = true
kabu-core-block-history.workspace = true
kabu-core-blockchain.workspace = true
kabu-core-mempool.workspace = true
kabu-core-router.workspace = true
kabu-defi-address-book.workspace = true
kabu-defi-health-monitor.workspace = true
kabu-defi-market.workspace = true
kabu-defi-pools.workspace = true
kabu-defi-preloader.workspace = true
kabu-defi-price.workspace = true
kabu-evm-db.workspace = true
kabu-evm-utils.workspace = true
kabu-execution-estimator.workspace = true
kabu-execution-multicaller.workspace = true
kabu-metrics.workspace = true
kabu-node-actor-config.workspace = true
kabu-node-debug-provider.workspace = true
kabu-node-json-rpc.workspace = true
kabu-rpc-handler.workspace = true
kabu-rpc-state.workspace = true
kabu-storage-db.workspace = true
kabu-strategy-backrun.workspace = true
kabu-strategy-merger.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true

axum.workspace = true
eyre.workspace = true
tokio-util.workspace = true

# alloy
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true

#revm
revm.workspace = true
