[package]
name = "kabu-core-blockchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-defi-address-book.workspace = true
kabu-evm-db.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true
kabu-types-events.workspace = true

alloy-chains.workspace = true

alloy.workspace = true
eyre.workspace = true
influxdb.workspace = true
revm.workspace = true
tracing.workspace = true
