[package]
name = "kabu-core-mempool"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true

chrono.workspace = true
eyre.workspace = true
influxdb.workspace = true
tokio.workspace = true
tracing.workspace = true

#alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

#revm
revm.workspace = true
