[package]
name = "kabu-core-mempool"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
eyre.workspace = true
influxdb.workspace = true
kabu-core-blockchain.workspace = true
kabu-core-components = { path = "../components" }
kabu-types-blockchain.workspace = true
kabu-types-events.workspace = true
tokio.workspace = true
tracing.workspace = true


# reth
reth-tasks.workspace = true
