[package]
name = "kabu-core-router"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kabu-core-actors.workspace = true
kabu-core-actors-macros.workspace = true
kabu-core-blockchain.workspace = true
kabu-types-blockchain.workspace = true
kabu-types-entities.workspace = true
kabu-types-events.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

revm.workspace = true
