[package]
name = "kabu-core-topology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kabu-broadcast-broadcaster.workspace = true

eyre.workspace = true
serde.workspace = true
strum_macros.workspace = true
toml.workspace = true
